PR Feedback:  * Code corrections  * The gallery is now a single tab stop  * Home and End work  * Arrow nav in the gallery does not wrap

--- a/theme/soundeffecteditor.less
+++ b/theme/soundeffecteditor.less
@@ -160,11 +160,6 @@
     input:focus-visible {
         outline: 3px solid var(--pxt-focus-border);
     }
-
-    &.selected {
-        background-color: var(--pxt-neutral-foreground1);
-        color: var(--pxt-neutral-background1);
-    }
 }
 
 /****************************************************
